[project]
name = "pdxdf"
version = "0.1.0"
description = "XDF data file processing with pandas."
readme = "README.md"
authors = [
    {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"

dependencies = [
    "pandas[performance]>=2.2.3",
    "pyxdf",
    "scipy>=1.15.1",
]

[project.optional-dependencies]
mne = [
    "mne>=1.9.0",
]

[project.urls]
"Homepage" = "https://github.com/jamieforth/pdxdf"
"Bug Tracker" = "https://github.com/jamieforth/pdxdf/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-lsp-server>=1.12.2",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyxdf = { git = "http://github.com/jamieforth/pyxdf", branch = "pr/handle-non-monotonic" }
